refactor: Refatorar obtenção da latência

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - SERVER_ADDR=:8080
     ports:
       - "8080:8080"
-
+  
   client:
     build: .
     environment:
@@ -17,3 +17,15 @@ services:
       - server
     stdin_open: true  # mantém o stdin aberto para digitar
     tty: true         # cria um terminal interativo
+  
+  test:
+    build: 
+      context: .
+      target: tester
+    environment:
+      - MODE=test
+    volumes:
+      - .:/app  # monta o código para facilitar desenvolvimento
+    command: go test ./test/... -v  # executa todos os testes na pasta test
+    profiles:
+      - testing  # só executa quando especificado
